address alignment issue fixed

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -51,12 +51,16 @@ header {
 .loadinfo {
     li {
         line-height: 1.65em;
-
+        display: flex;
+        flex-wrap: wrap;
         i {
             color: $color-grey;
             display: inline-block;
             margin-right: 5px;
             width: 25px;
+        }
+        span{
+            max-width: 190px;
         }
     }
 }
